# bitutils

./: .travis.yml  CMakeLists.txt  README.md
libbitutils/: CMakeLists.txt
libbitutils/include/: bitutils.h
libbitutils/src/: bitutils.cc
test/: CMakeLists.txt
test/testlibbitutils/: CMakeLists.txt  bitutilstest.cc  main.cc
